terraform/AWS/preproduction/vpc.tf
# Preproduction VPC

resource "aws_vpc" "preproduction_vpc" {
  cidr_block = "10.123.0.0/16"

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags {
    Name        = "Preproduction VPC"
    Environment = "${var.environment}"
    Terraform   = "true"
  }
}
